# 4D

./: .dockerignore  .gitignore  4d-compose.zero.yml  4d_history.csv  4d_history_backup_2026-03-13.csv  ANALYSIS_README.md  BUILD_RUST.md  DISK_BREAKDOWN_256GB.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  ML_README.md  SCRAPING_GUIDE.md  STORAGE_REMAINING.md  STORAGE_REPORT.md  deploy-on-server.sh  docker-compose.yml  main.py  pyproject.toml  requirements-backend-runtime.txt  requirements-docker.txt  run_with_rust.sh  scrape_history.py  scraper.py
.github/workflows/: deploy.yml
analysis/: BEST_NUMBER_ANALYSIS.md  PATTERN_ANALYSIS_SUMMARY.md  STRATEGY_24_RESULT.md  WHY_9844_PROFIT.md  __init__.py  backtest_all_numbers.py  backtest_ibox.py  eda.py  load.py  models.py  pattern_analysis.py  plots.py  prizes.py  rl.py  rl_es.py  run_analysis.py  run_ml.py  run_rl.py  run_rl_es.py  run_rl_tune.py  run_transformer.py  strategy_24.py  training_chart.py  transformer_4d.py
docs/: MAGNUM_4D_PRIZES.md  RL_ARCHITECTURE.md  RL_MODEL_CONTROL.md  TRANSFORMER_SOTA_2026.md
fetch_4d/: Cargo.toml
fetch_4d/src/: lib.rs
scripts/: scraper-smoke-test.py
web/: README.md  main.py
web-frontend/: .env.example  AUDIT_REPORT.md  CRITIQUE_REPORT.md  README.md  entrypoint.sh  index.html  nginx.conf  nginx.conf.template  package.json  tsconfig.tsbuildinfo  vite.config.ts
web-frontend/src/: index.css  main.tsx  routeTree.gen.ts  syncfusion-license.ts  syncfusion-overrides.css  syncfusion-theme-vars.css
web/static/: style.css
web/templates/: base.html  chart_fullscreen.html  (+1 more)
(+25 files in other folders)
